--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -3,15 +3,18 @@
 # --------------------------------------
 
 menu:
-  # Home: / || fas fa-home
-  # Archives: /archives/ || fas fa-archive
-  # Tags: /tags/ || fas fa-tags
-  # Categories: /categories/ || fas fa-folder-open
-  # List||fas fa-list:
-  #   Music: /music/ || fas fa-music
-  #   Movie: /movies/ || fas fa-video
-  # Link: /link/ || fas fa-link
-  # About: /about/ || fas fa-heart
+  文章 || icon--article || faa-tada:
+    归档: /archives/ || icon-guidang1 || faa-tada
+    标签: /tags/ || icon-sekuaibiaoqian || faa-tada
+    分类: /categories/ || icon-fenlei || faa-tada
+  社交 || icon-shejiaoxinxi || faa-tada || hide:
+    朋友圈: /moment/ || icon-pengyouquan || faa-tada
+    # 留言板: /comments/ || icon-liuyan || faa-tada
+    友人帐: /link/ || icon-lianjie || faa-tada
+    即刻短文: /essay/ || icon-qunliaotian || faa-tada
+  关于 || icon-maoliang || faa-tada || hide:
+    关于本站: /about/ || icon-paperplane || faa-tada
+    我的装备: /privacy-policy/ || icon-paperplane || faa-tada
 
 # Code Blocks (代碼相關)
 # --------------------------------------
@@ -87,7 +90,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img:
+index_img: false
 
 # If the banner of page not setting, it will show the top_img
 default_top_img:
@@ -656,23 +659,23 @@ aside:
   enable: true
   hide: false
   button: true
-  mobile: true # display on mobile
-  position: right # left or right
+  mobile: false # display on mobile
+  position: left # left or right
   display:
     archive: true
     tag: true
     category: true
   card_author:
     enable: true
-    description:
+    description: 随风飘起 如同浮云
     button:
       enable: true
       icon: fab fa-github
       text: Follow Me
-      link: https://github.com/xxxxxx
+      link: https://github.com/661111
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: 欢迎来到『苏晓河DawnRiver』的小站<br>(￣▽￣)～■干杯□～(￣▽￣)<br>如果有什么加载不出来或者其它滴小bug,「刷新网页/Ctrl+F5」应该、也许能解决
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -874,11 +877,21 @@ css_prefix: true
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
+# 如果需要引用跨域文件，需要添加网址
 inject:
   head:
-    # - <link rel="stylesheet" href="/xxx.css">
+    - <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
+    - <link rel="stylesheet" href="https://cdn.sxiaohe.top/css/font-awesome-animation.min.css"  media="defer" onload="this.media='all'">
+    - <link rel="stylesheet" href="/sxiaohe_source/css/page_css/equipment/index.css">
+    - <link rel="stylesheet" href="/sxiaohe_source/font.css">
+    #- <link rel="stylesheet" href="/xxx.css">
   bottom:
     # - <script src="xxxx"></script>
+    - <script src="/js/sxiaohe.js"></script>
+    - <script src="/js/qcqx.js"></script>
+    - <script async src="https://cdn.sxiaohe.top/js/font_3586335_hsivh70x0fm.js"></script>
+    - <script async src="https://cdn.sxiaohe.top/js/font_3636804_glcijzcpx7f.js"></script>
+    - <script async src="https://cdn.sxiaohe.top/js/font_3612150_gkavascgf3n.js"></script>
 
 # CDN
 # Don't modify the following settings unless you know how they work
@@ -953,3 +966,147 @@ CDN:
     # prismjs_autoloader:
     # artalk_js:
     # artalk_css:
+
+#hexo-butterfly-footer-marcus
+#see https://blog.marcus233.top/p/footer.html
+footer_beautify:
+  enable: true
+  priority: 5 #过滤器优先权
+  enable_page: all # 应用页面
+  layout: # 挂载容器类型
+      type: id
+      name: footer
+      index: 1
+  footer_icons:
+    enable: true
+    left:
+      - icon: fa-solid fa-compass
+        link: https://www.marcus233.top/
+        desrc: 个人主页
+        class: out
+      - icon: fa-brands fa-qq
+        link: https://res.abeim.cn/api/qq/?qq=3105950984
+        desrc: 联系QQ
+        class: out
+      - icon: fa-brands fa-weixin
+        link: /wechat/
+        desrc: 联系微信
+        class: in
+      - icon: fa-solid fa-envelope
+        link: mailto:marcus@marcus233.top
+        desrc: 发送邮件
+        class: out
+    right:
+      - icon: fa-brands fa-github
+        link: https://github.com/Marcusyyds
+        desrc: Github主页
+        class: out
+      - icon: fa-brands fa-bilibili
+        link: https://space.bilibili.com/1024450661
+        desrc: 哔哩哔哩主页
+        class: out
+      - icon: fa-solid fa-star
+        link: /stars/
+        desrc: 藏宝阁
+        class: in
+      - icon: fa-solid fa-comment
+        link: /message/
+        desrc: 留言
+        class: in
+  footer_logo:
+    enable: true
+    url: https://img01.anheyu.com/useruploads/8/2022/12/15/639adf5b8806a.png
+  footer_group:
+    enable: true
+    footer_group_link:
+      - group_title: 直达
+        footer_links: 
+          - text: 藏宝阁
+            link: /stars/
+            class: in
+          - text: 优秀句子
+            link: /sentence/
+            class: in
+          - text: 空间说说
+            link: /zone/
+            class: in
+          - text: 友链订阅
+            link: /fcircle/
+            class: in
+          - text: 切换背景
+            link: /bg/
+            class: in
+      - group_title: 关于
+        footer_links: 
+          - text: 关于我
+            link: /about/
+            class: in
+          - text: RSS订阅
+            link: /atom.xml
+            class: in
+          - text: 站点监控
+            link: https://uptime.marcus233.top/
+            class: out
+          - text: 更新记录
+            link: /timeline/
+            class: in
+          - text: 我的相册
+            link: /picture/
+            class: in
+      - group_title: 分类
+        footer_links: 
+          - text: 博客相关
+            link: /categories/博客相关
+            class: in
+          - text: 生活点滴
+            link: /categories/生活点滴
+            class: in 
+          - text: 资源分享
+            link: /categories/资源分享
+            class: in
+          - text: 学习笔记
+            link: /categories/学习笔记
+            class: in 
+          - text: 实用教程
+            link: /categories/实用教程
+            class: in 
+          - text: 查看全部
+            link: /categories/
+            class: in 
+  footer_friend_links:
+    enable: true
+    number: 5
+  footer_bottom:
+    copyright:
+      enable: true
+      author: Marcus
+      link: https://marcus233.top/
+      time: 2022
+    left:
+      - text: 雨云
+        desrc: 本站CDN支持
+        link: https://rainyun.com/
+      - text: 网盾星球
+        desrc: 本站CDN防护主要提供商:网盾星球
+        link: https://www.netdun.net/
+      - text: 萌ICP备20230221
+        desrc: 萌ICP备20230221
+        link: https://icp.gov.moe/?keyword=20230221
+      - text: 萌ICP备20236688
+        desrc: 萌ICP备20236688
+        link: https://icp.gov.moe/?keyword=20236688
+      - text: 萌ICP备20230002
+        desrc: 萌ICP备20230002
+        link: https://icp.gov.moe/?keyword=20230002
+    right:
+      - text: Hexo
+        desrc: 框架
+        link: https://hexo.io/zh-cn/
+      - text: Butterfly
+        desrc: 主题
+        link: https://butterfly.js.org/
+    runtime:
+      enable: true
+      time: 2022/08/09 00:00:00
+  footer_css: https://cdn.cbd.int/hexo-butterfly-footer-marcus@1.1.3/lib/footer.min.css
+  footer_js: https://cdn.cbd.int/hexo-butterfly-footer-marcus@1.1.3/lib/footer.min.css
