--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -644,13 +644,13 @@ subtitle:
 
 # Loading Animation (加載動畫)
 preloader:
-  enable: false
+  enable: true
   # source
   # 1. fullpage-loading
   # 2. pace (progress bar)
-  source: 1
-  # pace theme (see https://codebyzach.github.io/pace/)
-  pace_css_url:
+  source: 3
+  pace_css_url: /sxiaohe_source/css/loading/pace/full_pace.css
+  avatar: # 自定义头像
 
 # aside (側邊欄)
 # --------------------------------------
