--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -606,7 +606,7 @@ beautify:
 font:
   global-font-size:
   code-font-size:
-  font-family:
+  font-family: AaTaoTaoWuLongNaiLaoSu
   code-font-family:
 
 # Font settings for the site title and site subtitle
