--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "gulp": "^5.0.0",
     "hexo": "^6.3.0",
     "hexo-butterfly-footer-marcus": "^1.1.3",
     "hexo-generator-archive": "^2.0.0",
@@ -27,5 +28,11 @@
     "hexo-theme-landscape": "^1.0.0",
     "rgbaster": "^2.1.1",
     "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "gulp-clean-css": "^4.3.0",
+    "gulp-html-minifier-terser": "^7.1.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-terser": "^2.1.0"
   }
 }
