--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -811,7 +811,7 @@ note:
 pjax:
   enable: true
   exclude:
-    # - xxxx
+    - /essay
     # - xxxx
 
 # Inject the css and script (aplayer/meting)
