修复跳转到其他页面时loadingBar一直启动

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -14,7 +14,7 @@ menu:
     即刻短文: /essay/ || icon-qunliaotian || faa-tada
   关于 || icon-maoliang || faa-tada || hide:
     关于本站: /about/ || icon-paperplane || faa-tada
-    我的装备: /privacy-policy/ || icon-paperplane || faa-tada
+    我的装备: /equipment/ || icon-paperplane || faa-tada
 
 # Code Blocks (代碼相關)
 # --------------------------------------
