--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,9 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repository: git@github.com:661111/hexoSEVER.git
+  branch: gh-page
 
 # Generator-Search
 search:
