修改action执行文件

--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '20'
 
       - name: Setup Hexo
         env:
@@ -30,12 +30,14 @@ jobs:
           chmod 700 ~/.ssh
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.email "john@doe.com"
-          git config --global user.name "John Doe"
+          git config --global user.email "xiaoxin104@outlook.com"
+          git config --global user.name "661111"
           npm install hexo-cli -g
+          npm i yamljs --save
           npm install
 
       - name: Deploy
         run: |
+          node link.js
           hexo clean
           hexo deploy
