--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -1,43 +1,66 @@
-name: Hexo Deploy
-
+name: 自动部署
 on:
   push:
     branches:
       - main
+  release:
+    types:
+      - published
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
-    if: github.event.repository.owner.id == github.event.sender.id
-
+  deploy:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
+      - name: 检查分支
         uses: actions/checkout@v2
         with:
           ref: master
 
-      - name: Setup Node.js
+      - name: 安装 Node
         uses: actions/setup-node@v1
         with:
-          node-version: '20'
+          node-version: "20.x"
 
-      - name: Setup Hexo
-        env:
-          ACTION_DEPLOY_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
+      - name: 安装 Hexo
         run: |
-          mkdir -p ~/.ssh/
-          echo "$ACTION_DEPLOY_KEY" > ~/.ssh/id_rsa
-          chmod 700 ~/.ssh
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.email "xiaoxin104@outlook.com"
-          git config --global user.name "661111"
+          export TZ='Asia/Shanghai'
           npm install hexo-cli -g
-          npm i yamljs --save
-          npm install
 
-      - name: Deploy
+      - name: 缓存 Hexo
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: 安装依赖
+        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        run: |
+          npm install gulp-cli -g #全局安装gulp
+          npm install --save
+          npm install yamljs --save
+
+      - name: 生成轻量朋友圈需要的json文件
         run: |
           node link.js
+
+      - name: 生成静态文件
+        run: |
           hexo clean
-          hexo deploy
+          hexo generate
+          gulp
+
+      - name: 部署到Github
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          token: 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
+          repository-name: 661111/hexo-site-page
+          branch: main
+          folder: public
+          commit-message: "${{ github.event.head_commit.message }} Updated By Github Actions"
