--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -19,7 +19,7 @@ jobs:
       - name: 安装 Node
         uses: actions/setup-node@v1
         with:
-          node-version: "20.x"
+          node-version: "22.13.0"
 
       - name: 安装 Hexo
         run: |
