--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -881,6 +881,7 @@ css_prefix: true
 inject:
   head:
     - <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
+    - <script data-pjax type="text/javascript" src="/js/bbtalk.js"></script>
     - <link rel="stylesheet" href="https://cdn.sxiaohe.top/css/font-awesome-animation.min.css"  media="defer" onload="this.media='all'">
     - <link rel="stylesheet" href="/sxiaohe_source/css/page_css/equipment/index.css">
     - <link rel="stylesheet" href="/sxiaohe_source/font.css">
@@ -889,7 +890,6 @@ inject:
   bottom:
     # - <script src="xxxx"></script>
     - <script src="/js/sxiaohe.js"></script>
-    - <script src="/js/qcqx.js"></script>
     - <script data-pjax type="text/javascript" src="/js/waterfall.js"></script>
     - <script data-pjax type="text/javascript" src="/js/essay.js"></script>
     - <script data-pjax src="https://npm.elemecdn.com/anzhiyu-blog@1.1.6/js/swiper.min.js"></script>
