--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -809,8 +809,9 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: false
+  enable: true
   exclude:
+    - /js/bbtalk.js
     - /essay
     # - xxxx
 
@@ -881,7 +882,6 @@ css_prefix: true
 inject:
   head:
     - <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
-    - <script data-pjax type="text/javascript" src="/js/bbtalk.js"></script>
     - <link rel="stylesheet" href="https://cdn.sxiaohe.top/css/font-awesome-animation.min.css"  media="defer" onload="this.media='all'">
     - <link rel="stylesheet" href="/sxiaohe_source/css/page_css/equipment/index.css">
     - <link rel="stylesheet" href="/sxiaohe_source/font.css">
