--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -809,7 +809,7 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: true
+  enable: false
   exclude:
     - /js/bbtalk.js
     - /essay
@@ -890,9 +890,9 @@ inject:
   bottom:
     # - <script src="xxxx"></script>
     - <script src="/js/sxiaohe.js"></script>
-    - <script data-pjax type="text/javascript" src="/js/waterfall.js"></script>
-    - <script data-pjax type="text/javascript" src="/js/essay.js"></script>
-    - <script data-pjax src="https://npm.elemecdn.com/anzhiyu-blog@1.1.6/js/swiper.min.js"></script>
+    - <script type="text/javascript" src="/js/waterfall.js"></script>
+    - <script type="text/javascript" src="/js/essay.js"></script>
+    - <script src="https://npm.elemecdn.com/anzhiyu-blog@1.1.6/js/swiper.min.js"></script>
     - <script async src="https://cdn.sxiaohe.top/js/font_3586335_hsivh70x0fm.js"></script>
     - <script async src="https://cdn.sxiaohe.top/js/font_3636804_glcijzcpx7f.js"></script>
     - <script async src="https://cdn.sxiaohe.top/js/font_3612150_gkavascgf3n.js"></script>
