--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -16,6 +16,12 @@ menu:
     关于本站: /about/ || icon-paperplane || faa-tada
     我的装备: /equipment/ || icon-paperplane || faa-tada
 
+# swiper
+swiper:
+  enable: false
+  swiper_css: https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/swiper/swiper.min.css #swiper css依赖
+  swiper_js: https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/swiper/swiper.min.js #swiper js依赖
+
 # Code Blocks (代碼相關)
 # --------------------------------------
 
