--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "hexo": "6.3.0",
     "gulp": "^5.0.0",
-    "hexo": "^6.3.0",
     "hexo-butterfly-footer-marcus": "^1.1.3",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
