--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -1,4 +1,4 @@
-- class_name: 即刻短文
-  essay_list:
-    - content: 目前基本上已经完成了仿照轻笑的博客样式
-      date: 2025-02-04
+essay_list:
+  - content: 目前基本上已经完成了仿照轻笑的博客样式
+    date: 2025-02-04 15:30:50
+    from: 天选4锐龙版
