--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -25,8 +25,9 @@ essay:
   # 即刻短文仅展示前n条
   # Jike short text only shows the first n
   strip: 50
-  mode: memos # local：本地静态 / json：动态json / memos：动态Memos
+  mode: local # local：本地静态 / json：动态json / memos：动态Memos
   mode_link: https://memos.meuicat.com/api/v1/memo?creatorId=1&tag=说说 #动态模式地址
+  home_mini: true
 
 # Code Blocks (代碼相關)
 # --------------------------------------
