--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -26,7 +26,7 @@ essay:
   # Jike short text only shows the first n
   strip: 50
   mode: local # local：本地静态 / json：动态json / memos：动态Memos
-  mode_link: https://memos.meuicat.com/api/v1/memo?creatorId=1&tag=说说 #动态模式地址
+  mode_link: #动态模式地址
 
 # Code Blocks (代碼相關)
 # --------------------------------------
