--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -2,3 +2,5 @@ essay_list:
   - content: 目前基本上已经完成了仿照轻笑的博客样式
     date: 2025-02-04 15:30:50
     from: 天选4锐龙版
+    video: 
+      bilibili: //player.bilibili.com/player.html?aid=913951276&bvid=BV1RM4y1p75T&cid=1211165267&page=1
