--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -108,11 +108,11 @@ index_img: false
 default_top_img:
 
 # The banner image of archive page
-archive_img:
+archive_img: false
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img:
+tag_img: false
 
 # The banner image of tag page
 # format:
@@ -121,7 +121,7 @@ tag_per_img:
 
 # If the banner of category page not setting, it will show the top_img
 # note: category page, not categories page (子分類頁面的 top_img)
-category_img:
+category_img: false
 
 # The banner image of category page
 # format:
@@ -898,6 +898,8 @@ inject:
     - <link rel="stylesheet" href="/sxiaohe_source/css/page_css/equipment/index.css">
     - <link rel="stylesheet" href="/sxiaohe_source/font.css">
     - <link rel="stylesheet" href="https://npm.elemecdn.com/hexo-butterfly-swiper-anzhiyu@1.0.4/lib/swiper.min.css">
+    - <link rel="stylesheet" type="text/css" href="https://cdn.jsdmirror.com/npm/js-heo@1.0.11/mainColor/heoMainColor.css">
+    - <link rel="stylesheet" type="text/css" href="https://cdn.jsdmirror.com/npm/js-heo@1.0.11/404/404.css">
     #- <link rel="stylesheet" href="/xxx.css">
   bottom:
     # - <script src="xxxx"></script>
