--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -150,6 +150,7 @@ error_404:
   enable: true
   subtitle: 'Page Not Found'
   background: https://i.loli.net/2020/05/19/aKOcLiyPl2JQdFD.png
+  recommendList: true
 
 post_meta:
   page: # Home Page
