--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,14 @@ description: ''
 keywords:
 author: 『苏晓河DawnRiver』
 language: zh-CN
-email: blog@ccknbc.cc
+email:
 timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://example.com
-permalink: :year/:month/:day/:title/
+# permalink: :year/:month/:day/:title/
+permalink: posts/:abbrlink.html
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
