--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -634,7 +634,7 @@ beautify:
 font:
   global-font-size:
   code-font-size:
-  font-family: AaTaoTaoWuLongNaiLaoSu
+  font-family:
   code-font-family:
 
 # Font settings for the site title and site subtitle
