--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "version": "6.3.0"
   },
   "dependencies": {
-    "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
     "gulp": "^5.0.0",
     "hexo": "^6.3.0",
     "hexo-abbrlink": "^2.2.1",
     "hexo-butterfly-footer-marcus": "^1.1.3",
+    "hexo-butterfly-tag-plugins-plus": "^1.0.18",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-markdown-it": "^7.1.1",
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.1",
