--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "gulp": "^5.0.0",
     "hexo": "^6.3.0",
     "hexo-abbrlink": "^2.2.1",
@@ -28,6 +29,7 @@
     "hexo-renderer-markdown-it": "^7.1.1",
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.1",
+    "hexo-safego": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount": "^6.0.1",
