--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -58,7 +58,7 @@ jobs:
       - name: 部署到Github
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          token: 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
+          token: ${{ secrets.HEXO_TOKEN }}
           repository-name: 661111/hexo-site-page
           branch: main
           folder: public
