--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -176,11 +176,11 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/avatar.avif
+favicon: https://www.sxiaohe.top/img/avatar.avif
 
 # Avatar (頭像)
 avatar:
-  img: /img/avatar.avif
+  img: https://www.sxiaohe.top/img/avatar.avif
   effect: false
 
 # Disable all banner image
@@ -613,8 +613,8 @@ index_top_img_height:
 # The user interface setting of category and tag page (category和tag頁的UI設置)
 # index - same as Homepage UI (index 值代表 UI將與首頁的UI一樣)
 # default - same as archives UI 默認跟archives頁面UI一樣
-category_ui: # 留空或 index
-tag_ui: # 留空或 index
+category_ui: index # 留空或 index
+tag_ui: index # 留空或 index
 
 # Website Background (設置網站背景)
 # can set it to color or image (可設置圖片 或者 顔色)
