--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -747,7 +747,7 @@ preloader:
   # 1. fullpage-loading
   # 2. pace (progress bar)
   # else all
-  source: 3
+  source: 1
   # pace theme (see https://codebyzach.github.io/pace/)
   pace_css_url: /sxiaohe_source/css/loading/pace/full_pace.css
   avatar: # 自定义头像
@@ -987,7 +987,7 @@ inject:
     #- <link rel="stylesheet" href="/xxx.css">
   bottom:
     # - <script src="xxxx"></script>
-    - <script data-pace-options='{ "restartOnRequestAfter":false,"eventLag":false}' src="https://cdn.jsdmirror.com/npm/pace-js@latest/pace.min.js"></script>
+    # - <script data-pace-options='{ "restartOnRequestAfter":false,"eventLag":false}' src="https://cdn.jsdmirror.com/npm/pace-js@latest/pace.min.js"></script>
     - <script src="/js/sxiaohe.js" data-pjax="" defer=""></script>
     - <script async src="/js/waterfall.js" data-pjax="" defer=""></script> # 瀑布流JS
     - <script defer src="/js/essay.js" data-pjax="" defer=""></script> # 即刻逻辑文件
