--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           hexo clean
           hexo generate
+          gulp
 
       - name: 部署到Github
         uses: JamesIves/github-pages-deploy-action@v4
