--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "hexo-safego": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
-    "hexo-wordcount": "^6.0.1",
+    "hexo-wordcount-fomal": "^1.0.0",
     "markdown-it-container": "^4.0.0",
     "markdown-it-deflist": "^3.0.0",
     "markdown-it-emoji": "^3.0.0",
@@ -42,6 +42,8 @@
   },
   "devDependencies": {
     "gulp-clean-css": "^4.3.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-fontmin": "^0.7.4",
     "gulp-html-minifier-terser": "^7.1.0",
     "gulp-htmlclean": "^2.7.22",
     "gulp-terser": "^2.1.0"
