--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -119,8 +119,8 @@ hexo_safego:
 highlight_theme: light #  darker / pale night / light / ocean / mac / mac light / false
 highlight_copy: true # copy button
 highlight_lang: true # show the code language
-highlight_shrink: true # true: shrink the code blocks / false: expand the code blocks | none: expand code blocks and hide the button
-highlight_height_limit: false # unit: px
+highlight_shrink: false # true: shrink the code blocks / false: expand the code blocks | none: expand code blocks and hide the button
+highlight_height_limit: 150 # unit: px
 code_word_wrap: true
 
 # copy settings
