--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -27,6 +27,8 @@ essay:
   strip: 50
   mode: local # local：本地静态 / json：动态json / memos：动态Memos
   mode_link: #动态模式地址
+  home_mini: true
+  home_mini_link: /essay
 
 ## abbrlink config
 abbrlink:
