--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -60,9 +60,9 @@ jobs:
       - name: 部署到Github
         uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.HEXO_TOKEN }}
+          github_token: ${{ secrets.HEXO_TOKEN }}
           publish_branch: gh-page
-          publish_dir: public
+          publish_dir: ./public
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
           full_commit_message: ${{ github.event.head_commit.message }}
