--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           export TZ='Asia/Shanghai'
           npm install hexo-cli -g
-
       - name: 缓存 Hexo
         id: cache-npm
         uses: actions/cache@v3
@@ -38,31 +37,26 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-
       - name: 安装依赖
         if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         run: |
           npm install gulp-cli -g #全局安装gulp
           npm install --save
           
-
       - name: 生成轻量朋友圈需要的json文件
         run: |
           npm install yamljs --save
           node link.js
-
       - name: 生成静态文件
         run: |
           hexo clean
           hexo generate
           gulp
-
       - name: 部署到Github
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.HEXO_TOKEN }}
-          publish_branch: gh-page
-          publish_dir: ./public
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
-          full_commit_message: ${{ github.event.head_commit.message }}
+          token: ${{ secrets.HEXO_TOKEN }}
+          repository-name: 661111/hexo-site-page
+          branch: main
+          folder: public
+          commit-message: "${{ github.event.head_commit.message }} Updated By Github Actions"
