--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1211,5 +1211,5 @@ footer_beautify:
     runtime:
       enable: true
       time: 2022/08/09 00:00:00
-  footer_css: https://cdn.cbd.int/hexo-butterfly-footer-marcus@1.1.3/lib/footer.min.css
+  footer_css: 
   footer_js: /js/date.js
