--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1211,5 +1211,5 @@ footer_beautify:
     runtime:
       enable: true
       time: 2022/08/09 00:00:00
-  footer_css: 
+  footer_css: /css/index.css
   footer_js: /js/date.js
