优化添加内容

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1130,7 +1130,7 @@ footer_beautify:
         class: in
   footer_logo:
     enable: true
-    url: https://img01.anheyu.com/useruploads/8/2022/12/15/639adf5b8806a.png
+    url: https://www.sxiaohe.top/img/avatar.avif
   footer_group:
     enable: true
     footer_group_link:
