--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0",
+    "echarts": "^5.6.0",
     "gulp": "^5.0.0",
     "hexo": "^6.3.0",
     "hexo-abbrlink": "^2.2.1",
