--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -990,6 +990,7 @@ css_prefix: true
 inject:
   head:
     - <script data-pjax src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
+    - <link rel="preload" src="/img/todayCardCover.avif" />
     - <link rel="stylesheet" href="/css/font-awesome-animation.min.css"  media="defer" onload="this.media='all'">
     - <link rel="stylesheet" href="https://chinese-fonts-cdn.deno.dev/packages/lxgwwenkaibright/dist/LXGWBright-Regular/result.css">
     - <link rel="stylesheet" href="/css/swiper.min.css">
@@ -1029,7 +1030,7 @@ CDN:
   custom_format: https://cdn.staticfile.org/${cdnjs_name}/${version}/${min_cdnjs_file}
 
   option:
-    # main_css:
+    main_css: /css/index.css
     # main:
     # utils:
     # translate:
