--- a/_config.yml
+++ b/_config.yml
@@ -113,3 +113,9 @@ search:
   field: post
   format: html
   limit: 10000
+
+swpp:
+  enable: true
+  # rules 文件的名称（缺省值为 'sw-rules'）
+  # 没有需求不建议更改，当主题和用户配置项不同时会导致主题和插件无法正常配合工作
+  # rules:
