--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-safego": "^2.1.0",
     "hexo-server": "^3.0.0",
+    "hexo-swpp": "^4.0.0-alpha.131",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount-fomal": "^1.0.0",
     "markdown-it-container": "^4.0.0",
