--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-markdown-it": "^7.1.1",
     "hexo-renderer-pug": "^3.0.0",
+    "hexo-renderer-sass": "^0.5.0",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-safego": "^2.1.0",
     "hexo-server": "^3.0.0",
