优化添加内容

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -884,7 +884,7 @@ medium_zoom: false
 
 # fancybox
 # http://fancyapps.com/fancybox/3/
-fancybox: true
+fancybox: false
 
 # Tag Plugins settings (標籤外掛)
 # --------------------------------------
