--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
+    "echarts": "^5.6.0",
     "gulp": "^5.0.0",
     "hexo": "^6.3.0",
     "hexo-abbrlink": "^2.2.1",
