优化添加内容

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1067,7 +1067,7 @@ css_prefix: true
 # 如果需要引用跨域文件，需要添加网址
 inject:
   head:
-    - <script async src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
+    - <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
     - <script async src="https://jsd.sxiaohe.top/npm/echarts@4.7.0/dist/echarts.min.js"></script>
     - <link rel="preload" src="/img/todayCardCover.avif" />
     - <script src="/sw.js"></script>
