--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount-fomal": "^1.0.0",
+    "ioredis": "^5.5.0",
     "markdown-it-container": "^4.0.0",
     "markdown-it-deflist": "^3.0.0",
     "markdown-it-emoji": "^3.0.0",
